# tools

./: 2026-04-15-output.txt  2026-04-15-urls.txt  2026-04-16-output.txt  2026-04-16-urls.txt  2026-04-24-01-output.txt  dedup_isbn.py  extract_isbn_from_pdfEpubs.py  extract_isbn_mit.py  flake.nix  isbn_convert.py  isbn_merge.py  obtainUrlsFromMit.py  obtainsISBNFromPdfs.py  parseISBNFromHtml.py  pyproject.toml  tmp.txt  urls.txt
